Tests repaired and bug fixed